# marine_mammals_communication

./: .gitignore  README.md  pyproject.toml
configs/: audio_large_sanctsound_humpback_4cb.yaml  audio_large_sanctsound_humpback_dac_coarse.yaml  audio_medium_sanctsound_humpback_2048_4cb.yaml  audio_medium_sanctsound_humpback_4cb.yaml  audio_medium_swa_moe_sanctsound_humpback_dac_coarse_8k.yaml  audio_small.yaml  audio_small_all.yaml  audio_small_all_4cb_ab.yaml  audio_small_all_aug.yaml  audio_small_all_combined_4cb.yaml  audio_small_baleen.yaml  audio_small_baleen_4cb.yaml  audio_small_clean_combined_4cb.yaml  audio_small_clean_combined_denoised_4cb.yaml  audio_small_combined_4cb.yaml  audio_small_denoised_4cb.yaml  audio_small_sanctsound_humpback_4cb.yaml  audio_small_sanctsound_humpback_hi05_1024_4cb.yaml  audio_small_sanctsound_humpback_hi05_4cb.yaml  audio_small_sanctsound_watkins_4cb.yaml  audio_small_sperm.yaml  audio_small_toothed.yaml  audio_tiny_all.yaml  audio_tiny_all_4cb.yaml  symbolic_tiny.yaml  symbolic_tiny_dialogue.yaml
scripts/: denoise_aggressive.py  denoise_all_audio.py  denoise_demo.py  denoise_medium.py  download_data.py  download_more_data.py  download_sanctsound.py  eval_checkpoint.py  eval_codec_comparison.py  eval_codec_quality.py  evaluate.py  generate_all.py  generate_prompted.py  grade_audio_quality.py  organize_species.py  process_sanctsound.py  process_sanctsound_denoised.py  process_sanctsound_humpback.py  run_pipeline_pool.sh  tokenize_all_audio.py  tokenize_audio.py  tokenize_denoised_audio.py  train.py  train_all.sh  vram_probe.py
(+12 files in other folders)
